tests/final/bad/syntax_errors/missing_semicolon.src
fn main() -> int {
    int x = 1
    return x;
}
